--- a/src/app/pages/backup/backup.component.scss
+++ b/src/app/pages/backup/backup.component.scss
@@ -107,3 +107,24 @@ li {
   margin-right: 8px;
   vertical-align: middle;
 }
+
+.premium-badge {
+  position: absolute;
+  top: 16px;
+  right: 16px;
+  display: flex;
+  align-items: center;
+  background-color: #8e24aa; // Purple color for premium
+  color: white;
+  padding: 4px 12px;
+  border-radius: 16px;
+  box-shadow: var(--mat-sys-level2);
+  z-index: 1;
+}
+
+.premium-icon {
+  margin-right: 4px;
+  font-size: 18px;
+  height: 18px;
+  width: 18px;
+}
