--- a/src/app/pages/media/media-server-dialog/media-server-dialog.component.html
+++ b/src/app/pages/media/media-server-dialog/media-server-dialog.component.html
@@ -14,6 +14,17 @@
       }
     </mat-form-field>
     
+    <div class="suggested-servers">
+      <h3 class="suggested-title">Suggested servers:</h3>
+      <mat-chip-listbox [multiple]="false" class="server-chips">
+        @for (server of suggestedServers(); track server) {
+          <mat-chip-option (click)="selectSuggestedServer(server)">
+            {{ server.replace('https://', '') }}
+          </mat-chip-option>
+        }
+      </mat-chip-listbox>
+    </div>
+    
     <mat-form-field appearance="outline" class="full-width">
       <mat-label>Name (Optional)</mat-label>
       <input matInput formControlName="name" placeholder="My Media Server">
