feat: Increase security and privacy by not allowing target website to know anything about where links are coming from.

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -38,7 +38,7 @@
       <h3>Desktop</h3>
       <p>Nostria is also accessible as desktop app:</p>
       <ul>
-        <li><a href="https://github.com/sondreb/nostria/releases" target="_blank">Downloads</a></li>
+        <li><a href="https://github.com/sondreb/nostria/releases" target="_blank"  rel="noopener noreferrer">Downloads</a></li>
       </ul>
 
       <h3>Architecture</h3>
@@ -50,19 +50,19 @@
         <h3>Useful Links</h3>
         <mat-list>
           <mat-list-item>
-            <a href="https://github.com/sondreb/nostria" target="_blank" rel="noopener">
+            <a href="https://github.com/sondreb/nostria" target="_blank" rel="noopener noreferrer">
               <mat-icon>code</mat-icon>
               GitHub Repository
             </a>
           </mat-list-item>
           <mat-list-item>
-            <a href="https://nostr.com" target="_blank" rel="noopener">
+            <a href="https://nostr.com" target="_blank"  rel="noopener noreferrer">
               <mat-icon>info</mat-icon>
               Nostr Protocol
             </a>
           </mat-list-item>
           <mat-list-item>
-            <a href="https://github.com/sondreb/nostria/issues" target="_blank" rel="noopener">
+            <a href="https://github.com/sondreb/nostria/issues" target="_blank"  rel="noopener noreferrer">
               <mat-icon>bug_report</mat-icon>
               Report Issues
             </a>
