feat(media): enhance media server dialog with connection test button and update tab icons for better UX

--- a/src/app/pages/media/media-upload-dialog/media-upload-dialog.component.html
+++ b/src/app/pages/media/media-upload-dialog/media-upload-dialog.component.html
@@ -12,7 +12,7 @@
         >
         <mat-icon>cloud_upload</mat-icon>
         <p>Drag & drop a file here or click to browse</p>
-        <p class="file-types">Supports images and videos</p>
+        <!-- <p class="file-types">Supports images and videos</p> -->
       </div>
     } @else {
       <div class="file-preview">
