--- a/src/app/pages/media/media-server-dialog/media-server-dialog.component.html
+++ b/src/app/pages/media/media-server-dialog/media-server-dialog.component.html
@@ -4,7 +4,7 @@
   <mat-dialog-content>
     <mat-form-field appearance="outline" class="full-width">
       <mat-label>Server URL</mat-label>
-      <input matInput formControlName="url" placeholder="https://example.com/nostr-media">
+      <input matInput formControlName="url" placeholder="https://example.com/">
       <mat-hint>Must be a valid URL with HTTPS</mat-hint>
       @if (serverForm.get('url')?.hasError('required') && serverForm.get('url')?.touched) {
         <mat-error>Server URL is required</mat-error>
@@ -25,7 +25,7 @@
       </mat-chip-listbox>
     </div>
     
-    <mat-form-field appearance="outline" class="full-width">
+    <!-- <mat-form-field appearance="outline" class="full-width">
       <mat-label>Name (Optional)</mat-label>
       <input matInput formControlName="name" placeholder="My Media Server">
       <mat-hint>A friendly name for this server</mat-hint>
@@ -34,7 +34,7 @@
     <mat-form-field appearance="outline" class="full-width">
       <mat-label>Description (Optional)</mat-label>
       <textarea matInput formControlName="description" rows="3"></textarea>
-    </mat-form-field>
+    </mat-form-field> -->
     
     @if (testing()) {
       <div class="test-connection">
@@ -59,7 +59,7 @@
       Test Connection
     </button>
     <button mat-button mat-dialog-close>Cancel</button>
-    <button mat-raised-button type="submit" [disabled]="!serverForm.valid">
+    <button mat-flat-button type="submit" [disabled]="!serverForm.valid">
       {{ isEdit ? 'Update' : 'Add' }}
     </button>
   </mat-dialog-actions>
