--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -51,7 +51,7 @@
     </button>
 
     <mat-menu #menuNotifications="matMenu">
-      <button mat-menu-item (click)="appState.wipe()">
+      <button mat-menu-item (click)="app.wipe()">
         <mat-icon>delete</mat-icon>
         <span>Reset All Data (Wipe)</span>
       </button>
@@ -270,12 +270,12 @@
   }
 
   <!-- Loading overlay -->
-  @if (dataLoadingService.isLoading()) {
-  <app-loading-overlay [message]="dataLoadingService.loadingMessage()"></app-loading-overlay>
+  @if (appState.isLoading()) {
+  <app-loading-overlay [message]="appState.loadingMessage()"></app-loading-overlay>
   }
 
   <!-- Success overlay with checkmark -->
-  @if (dataLoadingService.showSuccess()) {
+  @if (appState.showSuccess()) {
   <div class="success-overlay">
     <div class="success-checkmark">
       <span class="success-icon">✓</span>
